# EmbeddingBiomarker

./: .gitignore  DATA_USE.md  NOTICE  README.md  decisions.md  pyproject.toml
config/: data.yaml  models.yaml  survival.yaml  treatments.yaml
notebooks/: 10_baseline_figures.ipynb  20_phase1_embeddings.ipynb  21_extract_embeddings_phase1.ipynb  24_pancreas_interpret_figures.ipynb  30_treatment_figures.ipynb  40_external_figures.ipynb  41_external_forest.ipynb  42_extract_embeddings_external.ipynb
results/: baseline_tabular.json  embedding_grid__medcpt.json  embedding_grid__medcpt_cls.json  embedding_grid__medcpt_last.json  embedding_grid__medgemma15.json  external_delta_ci.json  external_genie_brca.json  external_genie_crc.json  external_genie_nsclc.json  external_genie_panc.json  external_genie_prostate.json  interpret_pancreas.json  treatment_analysis.json
scripts/: 00_build_table.py  01_make_splits.py  02_make_prompts.py  10_baseline_tabular.py  20_extract_embeddings.py  22_cox_grid.py  24_pancreas_interpret.py  30_treatment_analysis.py  40_build_external.py  41_external_validate.py  42_external_delta_ci.py  make_paper_figures.py  paper_editor.py
src/embedbiomarker/: __init__.py  analysis.py  baselines.py  data.py  embeddings.py  external.py  prompts.py  splits.py  survival.py
tests/: test_baseline.py  test_external_genie.py  test_no_leakage.py  test_splits.py  test_treatment_strata.py
