[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "embedbiomarker"
version = "0.1.0"
description = "LLM as prognostic feature extractor (treatment-aware) on MSK-CHORD"
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "Ana María López" }]

# Core deps: enough for Phase 0 (splits, prompts, tabular baseline) and the
# survival head. Heavy DL stack lives in the optional [embeddings] extra so the
# initial install stays light.
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "xgboost>=2.0",
    "scikit-survival>=0.22",
    "lifelines>=0.27",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
# Phase 1: off-the-shelf / fine-tuned embedding extractors.
embeddings = [
    "torch>=2.1",
    "transformers>=4.40",
    "accelerate>=0.30",
]
dev = [
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
